--- a/samples/ehr-sample-app/src/index.html
+++ b/samples/ehr-sample-app/src/index.html
@@ -5,10 +5,8 @@
     <title>EHR Sample App</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module">
-      import { mount } from "./index.tsx";
-      mount("root");
+    <div id="app"></div>
+    <script type="module" src="index.tsx">
     </script>
   </body>
 </html>
